source/css/scss-common/base/_global-classes.scss
/* ... */
.a-dotted-line {
  display: block;
  width: 100%;
  height: 2px;
  background-image: $dotted-border-blue;
  background-repeat: repeat-x;
  background-position: bottom;
  background-size: 4px 2px;
}

.a-dotted-line-top {
  background-image: $dotted-border-blue;
  background-repeat: repeat-x;
  background-position: top;
  background-size: 4px 2px;
}

.a-borderSolid {
  border: 1px solid $grey-light;
}

.a-borderSolidDark {
  border: 1px solid $grey-medium;
}

.a-borderTop {
  border-top: 1px solid $grey-light;
}

.a-borderBottom {
  border-bottom: 1px solid $grey-light;
}

.a-borderTopDark {
  border-top: 1px solid $grey-medium;
}

.a-borderBottomDark {
  border-bottom: 1px solid $grey-medium;
}

// SR-only
.sr-only-focusable {
  &:active,
  &:focus {
    position: static;
    display: inline-block;
    width: 100%;
    height: auto;
    padding: 5px;
    padding-left: 10px;
    margin: 0;
    overflow: visible;
    clip: auto;
    // font-size: small; ?
    // font-weight: bolder; ?
    text-decoration: underline;
    background-color: $white;
    border-bottom: none;
  }
}

// Full width
.a-fullWidthXs {
  width: 100%;
}

// Display block
.a-displayBlock {
  display: block;
}

// Height *3
.a-height-3x {
  height: $spacer * 3;
  line-height: $spacer * 3;
}

// Border bottom
.a-border-bottom {
  border-bottom: 2px solid $grey-light;

  &.a-no-border-small {
    @include media-breakpoint-down( sm ) {
      border-bottom: none;
    }
  }
}

// No pointer
.a-noPointer {
  pointer-events: none;
  cursor: default;
}

// Clickable/Selectable
.a-clickable,
.a-selectable {
  &.a-focus,
  &:hover,
  &:active,
  &:focus {
    &:not(.a-expanded) {
      &:not(.a-deleted) {
        &:not(.a-completed) {
          &:not(.a-defaultCursor) {
            cursor: pointer;
            // background-color: $blue-light;

            &.a-primary {
              background-color: $blue-light;
            }

            &.a-success {
              background-color: $blue-light;
            }

            &.a-danger {
              background-color: $red-light;
            }
          }
        }
      }
    }
  }
}

// If background dark color
.a-jumbotron-dark {
  .a-clickable,
  .a-selectable {
    &:hover,
    &:active,
    &:focus {
      &:not(.a-expanded) {
        &:not(.a-deleted) {
          &:not(.a-completed) {
            cursor: pointer;
            background-color: $white-opacity-005;
            box-shadow: none;
          }
        }
      }
    }
  }
}

.a-deleted,
.a-completed {
  .row {
    &.a-selectableExpanded {
      &:hover,
      &:active,
      &:focus {
        cursor: default;
        background-color: transparent;
      }
    }
  }
}

.row {
  &.a-selectableExpanded {
    &:hover,
    &:active,
    &:focus {
      cursor: pointer;
      background-color: $blue-light;
    }
  }
}

.arrow-tr {
  position: relative;
  z-index: 9999;
  background: none;

  &::before {
    position: absolute;
    top: -72px;
    right: $spacer / 2;
    bottom: 100%;
    width: 0;
    height: 0;
    margin-left: -18px;
    pointer-events: none;
    content: ' ';
    border: solid transparent;
    border-width: 18px;
    border-bottom-color: $grey-light;
  }
}

.a-hiddenRow {
  display: none;
}

.a-iconStrikeThrough {
  padding-left: 3px;

  &::after {
    position: relative;
    left: -14px;
    //font-weight: 900;
    color: $black;
    content: '\\';

    @media all and (-ms-high-contrast: none),
      (-ms-high-contrast: active) {
        position: static;
    }
  }

  &.a-disabledIcon {
    color: $grey-medium;
  }

  &.a-redIcon {
    color: $red;
  }
}

.ai-sm {
  &.a-iconStrikeThrough {
    &::after {
      position: relative;
    }
  }
}

.a-selectable {
  &.a-selected {
    &.a-success {
      background-color: $green-light;
    }

    .a-hiddenWhenSelected {
      display: none;

      @include media-breakpoint-up( sm ) {
        display: none !important;
      }
    }

    .a-visibleWhenSelected {
      display: inline-block;

      @include media-breakpoint-up( sm ) {
        display: inline-block !important;
      }

      &.a-displayInlineBlock {
        display: inline-block !important;
      }
    }
  }

  .a-visibleWhenSelected {
    display: none;

    @include media-breakpoint-up( sm ) {
      display: none !important;
    }

    &.a-displayInlineBlock {
      display: inline-block !important;
    }
  }

  &.a-completed {
    background-color: $green-light;

    &:hover {
      cursor: default;
    }

    .a-hiddenWhenCompleted {
      display: none;
    }

    .a-visibleWhenCompleted {
      display: inline-block;

      @include media-breakpoint-up( sm ) {
        display: inline-block !important;
      }

      &.a-displayInlineBlock {
        display: inline-block !important;
      }
    }
  }

  &.a-deleted {
    background-color: $red-light;

    &:hover {
      cursor: default;
    }

    .a-hiddenWhenDeleted {
      display: none !important;
    }

    .a-visibleWhenDeleted {
      display: inline-block;

      @include media-breakpoint-up( sm ) {
        display: inline-block !important;
      }

      &.a-displayInlineBlock {
        display: inline-block !important;
      }
    }
  }

  &.a-expanded {
    background-color: $white;
  }

  &.a-disabled {
    &:hover {
      cursor: not-allowed !important;
    }

    .a-hiddenWhenDisabled {
      display: none;
    }

    .a-visibleWhenDisabled {
      display: inline-block;

      @include media-breakpoint-up( sm ) {
        display: inline-block !important;
      }

      &.a-displayInlineBlock {
        display: inline-block !important;
      }
    }
  }

  &:not(.a-selected) {
    &:not(.a-expanded) {
      &:not(.a-completed) {
        &:not(.a-deleted) {
          .a-visibleWhenInitial {
            display: inline-block !important;
          }
        }
      }
    }
  }

  .a-visibleWhenCompleted,
  .a-visibleWhenDeleted,
  .a-visibleWhenInitial,
  .a-visibleWhenDisabled {
    display: none !important;
  }
}
/* ... */

